Modify package structure; _Better_ error handling